fix(ActionList): better contrast ratio of disabled item

--- a/app/components/primer/alpha/action_list.pcss
+++ b/app/components/primer/alpha/action_list.pcss
@@ -240,7 +240,7 @@ nav-list {
     & .ActionListContent {
       & .ActionListItem-label,
       & .ActionListItem-description {
-        color: var(--control-fgColor-disabled);
+        color: var(--fgColor-muted);
       }
 
       & .ActionListItem-visual {
@@ -333,7 +333,7 @@ nav-list {
   &[aria-disabled='true'] {
     & .ActionListItem-label,
     & .ActionListItem-description {
-      color: var(--control-fgColor-disabled);
+      color: var(--fgColor-muted);
     }
 
     & .ActionListItem-visual {
